fix(theme): enable dark mode based on system settings

--- a/src/components/NextEvent.css
+++ b/src/components/NextEvent.css
@@ -73,7 +73,7 @@
 }
 
 .calendar-event-summary-and-description {
-  color: var(--ion-color-medium);
+  color: var(--ion-color-light);
   display: flex;
   flex-direction: column; /* Stack description and time vertically */
   flex: 1; /* Takes up remaining space in the parent flex container */
@@ -102,7 +102,7 @@
   display: flex;
   flex-direction: row; /* Stack description and time vertically */
   flex: 1; /* Takes up remaining space in the parent flex container */
-  color: var(--ion-color-medium);
+  color: var(--ion-color-light);
   font-size: 0.9em;
   font-weight: 600;
   overflow: hidden;
